--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,5 +18,10 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.xiaolee</groupId>
+            <artifactId>netty-common</artifactId>
+        </dependency>
     </dependencies>
 </project>
