--- a/client/pom.xml
+++ b/client/pom.xml
@@ -13,25 +13,14 @@
         <version>1.0.0.SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <netty-common-version>1.0.0.SNAPSHOT</netty-common-version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.protostuff</groupId>
-            <artifactId>protostuff-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.protostuff</groupId>
-            <artifactId>protostuff-runtime</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.protostuff</groupId>
-            <artifactId>protostuff-api</artifactId>
         </dependency>
 
         <dependency>
@@ -42,6 +31,12 @@
         <dependency>
             <groupId>com.xiaolee</groupId>
             <artifactId>netty-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xiaolee</groupId>
+            <artifactId>netty-common</artifactId>
+            <version>${netty-common-version}</version>
         </dependency>
     </dependencies>
 </project>
