--- a/server/pom.xml
+++ b/server/pom.xml
@@ -13,6 +13,10 @@
         <version>1.0.0.SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <netty-common-version>1.0.0.SNAPSHOT</netty-common-version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.netty</groupId>
@@ -22,6 +26,12 @@
         <dependency>
             <groupId>com.xiaolee</groupId>
             <artifactId>netty-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xiaolee</groupId>
+            <artifactId>netty-common</artifactId>
+            <version>${netty-common-version}</version>
         </dependency>
     </dependencies>
 </project>
