--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.xiaolee</groupId>
-    <artifactId>netty-client-server-demo-dependencies</artifactId>
+    <artifactId>netty-im-dependencies</artifactId>
     <version>1.0.0.SNAPSHOT</version>
 
 
