--- a/common/pom.xml
+++ b/common/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.xiaolee</groupId>
-        <artifactId>netty-im-dependencies</artifactId>
+        <artifactId>netty-im</artifactId>
         <version>1.0.0.SNAPSHOT</version>
     </parent>
 
