--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.xiaolee</groupId>
     <artifactId>netty-im</artifactId>
+    <packaging>pom</packaging>
     <version>1.0.0.SNAPSHOT</version>
 
     <modules>
@@ -12,6 +13,7 @@
         <module>common</module>
         <module>example</module>
         <module>server</module>
+        <module>starter</module>
     </modules>
 
     <dependencyManagement>
